uapdated the css of the icon and added api weather app icon

--- a/src/style.css
+++ b/src/style.css
@@ -65,17 +65,20 @@ header {
   display: flex;
 }
 .vanilla-weather-app-icon {
-  font-size: 44px;
-  margin-top: 22px;
+  width: 88px;
+  height: 88px;
 }
 .vanilla-weather-app-temperature {
   font-size: 88px;
   margin-left: 10px;
   font-weight: bold;
+  line-height: 88px;
 }
 .vanilla-weather-app-unit {
   margin-top: 16px;
   font-size: 28px;
+  line-height: 22px;
+  font-weight: bold;
 }
 footer {
   border-top: 1px solid #f9f7fe;
