--- a/src/style.css
+++ b/src/style.css
@@ -80,6 +80,33 @@ header {
   line-height: 22px;
   font-weight: bold;
 }
+.vanilla-weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.weather-forecast-date {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+.weather-icon {
+  font-size: 38px;
+  text-align: center;
+}
+.weather-forecast-temp {
+  text-align: center;
+  color: #ff6f3c;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+.weather-temperature-min {
+  padding: 0 18px;
+  opacity: 0.5;
+}
 footer {
   border-top: 1px solid #f9f7fe;
   padding: 30px 0 0 0;
