--- a/src/style.css
+++ b/src/style.css
@@ -93,8 +93,10 @@ header {
   margin-bottom: 10px;
 }
 .weather-icon {
-  font-size: 38px;
-  text-align: center;
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 .weather-forecast-temp {
   text-align: center;
